# tadm

./: Cargo.toml  Justfile  README.md
benches/: benchmark.rs
src/sort/: insertion_sort.rs  mod.rs
