[package]
authors = ["daniel.javorszky@gmail.com"]
description = "A collection of algorithms and data structures wrote out while reading The Algorithm Design Manual book"
documentation = "https://docs.rs/tadm/latest/tadm/"
edition = "2021"
homepage = "https://jdan.dev"
license = "MIT OR Apache-2.0"
name = "tadm"
repository = "https://github.com/djavorszky/tadm"
rust-version = "1.58"
version = "0.1.1"


[dependencies]

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
harness = false
name = "benchmark"
